// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextField > renders 1`] = `
<div
  class="flex flex-col gap-1"
>
  <label
    class="text-sm font-semibold"
    for="field-email"
  >
    Email
  </label>
  <div
    class="relative"
  >
    <input
      aria-invalid="false"
      class="w-full rounded-box border-tip py-2 pl-3 text-sm outline-none focus:border-third disabled:cursor-not-allowed disabled:bg-palette-bg1 border bg-white pr-3"
      id="field-email"
    />
  </div>
</div>
`;

exports[`TextField > renders with a trailing slot 1`] = `
<div
  class="flex flex-col gap-1"
>
  <label
    class="text-sm font-semibold"
    for="field-email"
  >
    Email
  </label>
  <div
    class="relative"
  >
    <input
      aria-invalid="false"
      class="w-full rounded-box border-tip py-2 pl-3 text-sm outline-none focus:border-third disabled:cursor-not-allowed disabled:bg-palette-bg1 border bg-white pr-10"
      id="field-email"
    />
    <span
      class="absolute inset-y-0 right-1 flex items-center"
    >
      <button
        type="button"
      >
        Eye
      </button>
    </span>
  </div>
</div>
`;

exports[`TextField > renders with an error 1`] = `
<div
  class="flex flex-col gap-1"
>
  <label
    class="text-sm font-semibold"
    for="field-email"
  >
    Email
  </label>
  <div
    class="relative"
  >
    <input
      aria-describedby="field-email-error"
      aria-invalid="true"
      class="w-full rounded-box border-tip py-2 pl-3 text-sm outline-none focus:border-third disabled:cursor-not-allowed disabled:bg-palette-bg1 border-2 bg-app-error/10 pr-3"
      id="field-email"
    />
  </div>
  <span
    class="text-xs text-app-error"
    id="field-email-error"
  >
    Enter a valid email address
  </span>
</div>
`;
